[metadata]
name=naf
version=0.3
author=MLW
description=Collection of numerical analysis functions
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/mwhit74/naf
license=MIT
packages=[naf]

[options]
package_dir =
    = naf
packages = find:
python_requires = >=3.6

[options.packages.find]
where = naf

#'naf.linalg','naf.nonlin','naf.incf'
